k8s/canary/service-canary.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-canary-release
  namespace: __NAMESPACE__
spec:
  selector:
    app: aceest-fitness
    strategy: canary
    track: canary
  ports:
    - name: http
      port: 80
      targetPort: 5000
