k8s/canary/service-stable.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-canary-stable
  namespace: __NAMESPACE__
spec:
  selector:
    app: aceest-fitness
    strategy: canary
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 5000
