k8s/canary/ingress-stable.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-canary-main
  namespace: __NAMESPACE__
spec:
  ingressClassName: nginx
  rules:
    - host: __APP_HOST__
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-canary-stable
                port:
                  number: 80
